index : fix image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In cupiditate ex vitae temporibus id deserunt pariatur facere adipisci, autem, obcaecati incidunt libero aliquid ipsum possimus sit rerum perferendis voluptate!ipsum possimus sit rerum perferendis voluptate!</p>
                 </div>
                 <div class="card2 left">
-                    <img src="./img/banner-2.jpg" alt="" class="img2" >
+                    <img class="img2" >
                     <h4>Ipsum</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro quas molestiae fugit atque architecto nam quidem ab minus, incidunt quibusdam maxime nisi ea sed. Accusantium quibusdam architecto eius commodi eos, vitae reprehenderit iure dolorum dolores beatae molestias dignissimos iste? Saepe nobis consectetur vel, quasi delectus repellat voluptatum blanditiis perspiciatis impedit sapiente! Cupiditate laboriosam voluptates officia possimus quae, reprehenderit impedit ducimus molestias! Ducimus a, voluptatem expedita iusto reprehenderit mollitia aspernatur est vitae numquam quaerat architecto rerum reiciendis totam harum voluptates animi saepe ut commodi quasi deserunt porro amet quam? Quidem saepe sapiente, facilis accusamus maxime nostrum expedita. Ab nesciunt ut est iusto facilis dignissimos fugit ad ea, consectetur possimus, natus fugiat nemo tempore officia at neque enim. Debitis iure maiores repellat porro sint tenetur! Sequi fugit perferendis repellat porro sint tenetur! Sequi fugit perferendis.</p>
                 </div>
