--- a/index.html
+++ b/index.html
@@ -1,46 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Serif&family=Roboto:wght@700&display=swap"
+        rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <div class="big-container">
         <div class="container">
 
-            <header class="">
-                <span class="logo">
-                    <img src="./img/logo.png" alt="">
 
-                </span>
-                <span class="nav">
-                    <span class="nav-text"> Features</span>
-                    <span class="nav-text"> Editorials</span>
-                    <span class="nav-text"> Enviroment</span>
-                    <span class="nav-text"> Blog</span>
-                    <span class="nav-text"> Shop</span>
-                    <span class="nav-text"> Contact</span>
+            <span class="logo">
+                <img src="./img/logo.png" alt="">
 
-                </span>
+            </span>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="">Features</a>
+                    </li>
+                    <li>
+                        <a href="">Editorials</a>
+                    </li>
+                    <li>
+                        <a href="">Enviroment</a>
+                    </li>
+                    <li>
+                        <a href="">Blog</a>
+                    </li>
+                    <li>
+                        <a href="">Shop</a>
+                    </li>
+                    <li>
+                        <a href="">Contact</a>
+                    </li>
+                </ul>
 
-            </header>
-            <figure class="figure">
 
-                    <img src="./img/banner.jpg" alt="">
-                    <div class="description-image">
-                        <h1>Pretium ac placerat dui interdum nunc in eros urna morbi</h1>
-                        <span>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, dolores fugit sapiente molestiae dignissimos iusto fuga explicabo nesciunt neque autem?
-                        </span>
-                    </div>
+            </nav>
+
+
+            <figure class="hero">
+
+                <img src="./img/banner.jpg" alt="">
+                <div class="description-image">
+                    <h1>Pretium ac placerat dui interdum nunc in eros urna morbi</h1>
+                    <span>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, dolores fugit sapiente molestiae
+                        dignissimos iusto fuga explicabo nesciunt neque autem?
+                    </span>
+                </div>
 
 
             </figure>
         </div>
-<!-- container-2 -->
+        <!-- container-2 -->
         <main class="container-2">
             <div class="box-title">
                 <h1 class="title-table">Leadership</h1>
@@ -51,17 +74,31 @@
                 <div class="card left">
                     <img src="img/img-1.jpg" alt="" class="img1">
                     <h4>LOREM</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In cupiditate ex vitae temporibus id deserunt pariatur facere adipisci, autem, obcaecati incidunt libero aliquid ipsum possimus sit rerum perferendis voluptate!ipsum possimus sit rerum perferendis voluptate!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In cupiditate ex vitae temporibus id
+                        deserunt pariatur facere adipisci, autem, obcaecati incidunt libero aliquid ipsum possimus sit
+                        rerum perferendis voluptate!ipsum possimus sit rerum perferendis voluptate!</p>
                 </div>
                 <div class="card2 left">
-                    <img class="img2" >
+                    <img class="img2">
                     <h4>Ipsum</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro quas molestiae fugit atque architecto nam quidem ab minus, incidunt quibusdam maxime nisi ea sed. Accusantium quibusdam architecto eius commodi eos, vitae reprehenderit iure dolorum dolores beatae molestias dignissimos iste? Saepe nobis consectetur vel, quasi delectus repellat voluptatum blanditiis perspiciatis impedit sapiente! Cupiditate laboriosam voluptates officia possimus quae, reprehenderit impedit ducimus molestias! Ducimus a, voluptatem expedita iusto reprehenderit mollitia aspernatur est vitae numquam quaerat architecto rerum reiciendis totam harum voluptates animi saepe ut commodi quasi deserunt porro amet quam? Quidem saepe sapiente, facilis accusamus maxime nostrum expedita. Ab nesciunt ut est iusto facilis dignissimos fugit ad ea, consectetur possimus, natus fugiat nemo tempore officia at neque enim. Debitis iure maiores repellat porro sint tenetur! Sequi fugit perferendis repellat porro sint tenetur! Sequi fugit perferendis.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro quas molestiae fugit
+                        atque architecto nam quidem ab minus, incidunt quibusdam maxime nisi ea sed. Accusantium
+                        quibusdam architecto eius commodi eos, vitae reprehenderit iure dolorum dolores beatae molestias
+                        dignissimos iste? Saepe nobis consectetur vel, quasi delectus repellat voluptatum blanditiis
+                        perspiciatis impedit sapiente! Cupiditate laboriosam voluptates officia possimus quae,
+                        reprehenderit impedit ducimus molestias! Ducimus a, voluptatem expedita iusto reprehenderit
+                        mollitia aspernatur est vitae numquam quaerat architecto rerum reiciendis totam harum voluptates
+                        animi saepe ut commodi quasi deserunt porro amet quam? Quidem saepe sapiente, facilis accusamus
+                        maxime nostrum expedita. Ab nesciunt ut est iusto facilis dignissimos fugit ad ea, consectetur
+                        possimus, natus fugiat nemo tempore officia at neque enim. Debitis iure maiores repellat porro
+                        sint tenetur! Sequi fugit perferendis repellat porro sint tenetur! Sequi fugit perferendis.</p>
                 </div>
                 <div class="card left">
                     <img src="img/img-3.jpg" alt="" class="img3">
                     <h4>Lorem</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In cupiditate ex vitae temporibus id deserunt pariatur facere adipisci, autem, obcaecati incidunt libero aliquid ipsum possimus sit rerum perferendis voluptate!ipsum possimus sit rerum perferendis voluptate!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In cupiditate ex vitae temporibus id
+                        deserunt pariatur facere adipisci, autem, obcaecati incidunt libero aliquid ipsum possimus sit
+                        rerum perferendis voluptate!ipsum possimus sit rerum perferendis voluptate!</p>
                 </div>
 
 
@@ -87,4 +124,5 @@
     </div>
 
 </body>
+
 </html>
